Bug 767697 - Stop invalidating rendering observers of ancestors of SVG frames that only render by reference. r=longsonr.

--HG--
extra : rebase_source : 081ae9cc097b57783f037785f64be46a9e7cfc49